--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "QA_REJECTION_SRV",
+  "name": "qa_rejection_srv",
   "version": "0.0.1",
   "description": "An SAP Fiori application.",
   "keywords": [
