--- a/.appGenInfo.json
+++ b/.appGenInfo.json
@@ -4,7 +4,7 @@
     "generatorPlatform": "SAP Business Application Studio",
     "serviceType": "SAP System (ABAP On-Premise)",
     "metadataFilename": "",
-    "serviceUrl": "http://ds4http.sap.essa.id:44300/sap/opu/odata/sap/ZMMGW_ON_TIME_DELIVERY_SRV",
+    "serviceUrl": "http://vhpuads4ci.sap.essa.id:44300/sap/opu/odata/sap/ZMMGW_QUALTITY_REJECTION_SRV",
     "appName": "qa_rejection_srv",
     "appTitle": "Quality Rejection KPI",
     "appDescription": "An SAP Fiori application.",
