--- a/ui5-local.yaml
+++ b/ui5-local.yaml
@@ -31,14 +31,14 @@ server:
         ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
         backend:
           - path: /sap
-            url: http://ds4http.sap.essa.id:44300
+            url: http://vhpuads4ci.sap.essa.id:44300
             destination: DS4_100_HTTPS
     - name: sap-fe-mockserver
       beforeMiddleware: csp
       configuration:
         mountPath: /
         services:
-          - urlPath: /sap/opu/odata/sap/ZMMGW_ON_TIME_DELIVERY_SRV
+          - urlPath: /sap/opu/odata/sap/ZMMGW_QUALTITY_REJECTION_SRV
             metadataPath: ./webapp/localService/mainService/metadata.xml
             mockdataPath: ./webapp/localService/mainService/data
             generateMockData: true
