--- a/ui5.yaml
+++ b/ui5.yaml
@@ -9,7 +9,7 @@ server:
     - name: fiori-tools-proxy
       afterMiddleware: compression
       configuration:
-        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
+        ignoreCertErrors: true # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
         ui5:
           path:
             - /resources
@@ -17,7 +17,7 @@ server:
           url: https://ui5.sap.com
         backend:
           - path: /sap
-            url: http://ds4http.sap.essa.id:44300
+            url: https://vhpuads4ci.sap.essa.id:44300
             destination: DS4_100_HTTPS
     - name: fiori-tools-appreload
       afterMiddleware: compression
